--- a/HW-6/src/style.css
+++ b/HW-6/src/style.css
@@ -21,6 +21,7 @@ header section nav a{
     padding: 20px;
     text-decoration: none;
     color: #828282;
+    transition: color 0.5s;
 }
 
 header section nav a:hover {
@@ -35,15 +36,26 @@ hr {
     width: 970px;
 }
 
+main {
+    width: 970px;
+    margin: 0 auto;
+}
+
 h1 {
     font-size: 48px;
-    font-weight: 700px;
+    line-height: 65px;
+    margin: 0 auto;
+    padding-top: 5px;
+    padding-bottom: 40px;
 }
 
 h2 {
     font-weight: 700;
     font-size: 34px;
     text-align: center;
+    margin: 0 auto;
+    padding-top: 100px;
+    padding-bottom: 30px;
 }
 
 h3 {
@@ -51,62 +63,151 @@ h3 {
     font-weight: 700px;
     line-height: 19px;
     color: #828282;
+    padding-top: 30px;
+    padding-bottom: 60px;
 }
 
-section.about  {
-    padding-top: 100px;
-    padding-bottom: 100px;
+.about  {
     background-color:#F6F6F6;
+    margin: 0 auto;
+    height: 500px;
 }
 
-section.about div {
+.about div {
     width: 480px;
     margin: 0 auto ;
 }
 
-section.about div p {
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 25px;
+.about div p {
+    margin-bottom: 0;
     text-align: center;
+    padding-bottom: 20px;
 }
 
-section.skills div.col-12 {
+.skills p {
+    padding-bottom: 20px;
+}
+
+.skills .col-12 {
     display: inline-flex;
     width: 100%;
+    height: 350px;
 
 }
-section.skills div.col-12 div.col-3 {
+.skills .col-12 .col-3 {
     display: inline-block;
     width: 25%;
 }
 
-section.skills div.col-12 div.col-3 img {
+.skills .col-12 .col-3 img {
     margin: 0 auto;
     display: block;
 }
 
-section.skills div.col-12 div.col-3 h3 {
+.skills div.col-12 div.col-3 h3 {
+    margin: 0 auto;
     text-align: center;
+    width: 80px;
 }
 
 .center {
     text-align: center;
 }
 
-.box {
-    border: none;
-    width: 75px;
-    height: 38px;
+#portfolio {
+    margin: 0 auto;
+    text-align: center;
+    background-color:#F6F6F6;
+}
+
+.portfolio a{
+    padding-top: 30px;
+}
+
+div.link {
+    padding-top: 10px;
+    padding-bottom: 50px;
+}
+
+div.link a{
+    color: black;
+}
+
+div.link a:hover{
+    color: #828282;
+    text-decoration: none;
+    transition: color 0.5s;
+}
+
+footer {
+    margin: 0 auto;
     text-align: center;
 }
 
-main {
-    width: 970px;
+section#portfolio div img{
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+button { 
+    margin: 0 auto;
+    display: inline-block;
+    border-style: none;
+    background: black;
+    border-radius: 22px;
+    width: 180px;
+    height: 44px;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+button.padding{
+    margin-top: 30px;
+}
+
+div.ecenter {
+    margin: 0 auto;
+    display: flex;
+}
+
+div.col-12 {
+    width: 100%;
+    display: flex;
+}
+
+div.col-3 {
+    width: 25%;
+    display: inline-block;
+}
+
+div.padding {
+    padding-top: 25px;
+    padding-bottom: 40px;
+}
+
+section#contacts {
+    width: 380px;
     margin: 0 auto;
 }
 
+div.footer-text {
+    margin: 0 auto;
+    display: flex;
+    width: 200px;
+    height: 60px;
+    line-height: 20px; 
+    padding-bottom: 80px;
+}
 
+div.footer-text p{
+    color:#828282;
+    font-size: 14px;
+}
+
+div.text-lh p{
+    line-height: 0px;
+}
 
 
 
