--- a/HW-8/src/style.css
+++ b/HW-8/src/style.css
@@ -9,11 +9,14 @@ body {
     font-weight: 500;
     color: #544837;
     line-height: 26px; 
-    max-width: 1200px;
-    width: 100%;  
 }
 
-.header, .hero-section, .product {}
+.container {
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 15px;
+}
 
 h1 {
     margin: 0 0 30px;
@@ -41,79 +44,104 @@ p {
     margin: 0 0 20px;
 }
 
-a, button:hover {
-    -webkit-transition: all.6s ease;
-    -moz-transition: all.6s ease;
-    -o-transition: all.6s ease;
-    -ms-transition: all.6s ease;
+a, .btn:hover {
     transition: all.6s ease;
 }
 
-.container {
-    display: flex;
-    margin: 0 auto;
-    padding: 0 15px;
-}
-
-.header .row {
-    margin: 0 auto;
-    display: inline-block;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
+.header {
     padding: 17px 0;
+    width: 100%;
+}
+
+.header .container {
+    display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
+    align-items: center;
 }
 
-.header .row .logo {
+ul {
     display: flex;
-    width: 33%;
+    justify-content: space-between;
+    margin: 0 auto;
+    text-decoration: none;
+    list-style-type: none;
 }
-
-.header .row .nav {
-    display: flex;
-    width: 33%;
-}
-
-.header .button {
-    display: flex;
-    width: 33%;
-    padding-left: 100px;
-}
-
-.nav-list {
-    list-style: none;
-    text-align: center;
-    margin: 0 -10px;
-}
-
-.nav-item {
-    display: inline-block;
+li {
+    position: relative;
     padding: 0 10px;
 }
 
-.nav-link {
+.header .nav .nav-link {
     color: #2F281E;
     font-weight: 400;
     line-height: 28px;
     text-decoration: none;
 }
 
-.nav-link:hover {
+.header .nav .nav-link:hover {
     color: #FF9900;
 }
 
-.row {
-    overflow: hidden;
+.btn .sing-in {
+    margin: 0 auto;
+    text-align: center;
+    background-color: #fff;
+    border-color: #BCD0E5;
+    width: 100%;
+    max-width: 110px;
+    height: 46px;
+    border-style: solid;
+    border-radius: 4px;
+    border-width: 1px;
+    text-decoration: none;
+    color: #2F281E;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
+    padding: 13px;
+    cursor:pointer;
 }
 
-.col {
-    /* float: left; */
+.btn .sing-in:hover {
+    background-color: #FF9900;
+    border-style: none;
+    color: #fff;
 }
 
-.hero-section .row {
-    display: inline-flex;
+.btn .sing-up {
+    margin: 0 auto;
+    text-align: center;
+    border: none;
+    background-color: #FF9900;
+    border-radius: 4px;
+    width: 100%;
+    max-width: 110px;
+    height: 46px;
+    text-decoration: none;
+    color: #fff;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
+    padding: 13px;
+    cursor:pointer;
+    margin-left: 30px;
+}
+
+.btn .sing-up:hover {
+    background-color: #fff;
+    border: #BCD0E5;
+    border-style: solid;
+    border-radius: 4px;
+    border-width: 1px;
+    color: #2F281E;
+}
+
+.hero-section .container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .hero-section .row .col {
@@ -125,17 +153,60 @@ a, button:hover {
     padding: 200px 0;
 }
 
+.col {
+    float: left;
+}
+
 .hero-section p {
     font-weight: 400;
     font-size: 18px;
     line-height: 28px;
 }
 
+.hero-section .btn .get-started {
+    display: flex;
+    border: none;
+    background-color: #FF9900;
+    border-radius: 4px;
+    width: 100%;
+    max-width: 180px;
+    height: 100%;
+    max-height: 50px;
+    text-decoration: none;
+    color: #fff;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
+    padding: 13px;
+    cursor:pointer;
+    flex-direction: row;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+}
+
+.hero-section .btn .get-started:hover {
+    background-color: #fff;
+    border-color: #BCD0E5;
+    border-style: solid;
+    border-radius: 4px;
+    border-width: 1px;
+    color: #2F281E;
+}
+
 .product {
-    display: inline-block; 
     background-image: url("./../img/bg.png");
     background-size: cover;
-    background-position: center;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+}
+
+.product .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 0 100px;
     max-height: 510px;
 }
 
@@ -143,100 +214,53 @@ a, button:hover {
     margin: 0 auto;
     text-align: center;
     max-width: 539px;
-    padding: 0 0 50px 0;
+    padding: 0 0 50px;
+}
+
+.product .row {
+    padding: 0 -20px;
 }
 
 .product .row .col {
-    display: inline-block;
     width: 25%;
-    max-width: 270px;
+    padding: 0 20px;
 }
 
-.product .container {
-    display: inline-block;
+.product .container .btn {
+    display: flex;
     margin: 0 auto;
-    padding: 0px 0px 100px 0px;
+    width: 100%;
+    justify-content: center;
+    padding: 25px 0 0 0;
 }
 
-button {
-    margin: 0 auto;
-    display: inline-block;
+.product .container .sing-up-now {
+    display: flex;
     border: none;
     background-color: #FF9900;
     border-radius: 4px;
     width: 100%;
     max-width: 180px;
     height: 50px;
+    text-decoration: none;
     color: #fff;
     font-weight: 700;
     font-size: 16px;
     line-height: 24px;
     padding: 13px;
     cursor:pointer;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 
-.container .btn-2 {
-    padding: 70px;
-}
-
-button:hover {
+.product .container .sing-up-now:hover {
     background-color: #fff;
-    border: #BCD0E5;
+    border-color: #BCD0E5;
     border-style: solid;
     border-radius: 4px;
     border-width: 1px;
     color: #2F281E;
 }
 
-.btn-2 {
-    margin: 0 auto;
-    display: flex;
-}
-
-.sing-in {
-    margin: 0 auto;
-    display: inline-block;
-    background-color: #fff;
-    border: #BCD0E5;
-    border-style: solid;
-    border-radius: 4px;
-    border-width: 1px;
-    color: #2F281E;
-    width: 100%;
-    max-width: 110px;
-    height: 46px;
-}
-
-.sing-in:hover {
-    background-color: #FF9900;
-    border-style: none;
-    color: #fff;
-}
-
-.sing-up {
-    margin: 0 auto;
-    display: inline-block;
-    text-align: center;
-    border: none;
-    background-color: #FF9900;
-    border-radius: 4px;
-    width: 100%;
-    max-width: 110px;
-    height: 46px;
-    color: #fff;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 24px;
-    padding: 13px;
-    cursor:pointer;
-}
-
-.sing-up:hover {
-    background-color: #fff;
-    border: #BCD0E5;
-    border-style: solid;
-    border-radius: 4px;
-    border-width: 1px;
-    color: #2F281E;
-}
 
