--- a/HW-8/src/style.css
+++ b/HW-8/src/style.css
@@ -408,6 +408,18 @@ form {
     padding: 0 0 25px;
 }
 
+input[type="tel"]::-webkit-input-placeholder {
+    color: #BCD0E5;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+}
+
+input, textarea {
+    outline: none;
+    border: none;
+}
+
 /*#product-managers {
     display: flex;
     flex-wrap: wrap;
