--- a/HW-8/src/style.css
+++ b/HW-8/src/style.css
@@ -264,7 +264,7 @@ a, .btn:hover {
 }
 
 .product .container .sing-up-now:hover {
-    background-color: #fff;
+    background-color: #ff00;
     border-color: #BCD0E5;
     border-style: solid;
     border-radius: 4px;
