--- a/HW-8/src/style.css
+++ b/HW-8/src/style.css
@@ -420,7 +420,7 @@ input, textarea {
     border: none;
 }
 
-/*#product-managers {
+/*.benefits-section#product-managers .container{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
