--- a/HW-8/src/style.css
+++ b/HW-8/src/style.css
@@ -1,4 +1,6 @@
-*, *::after, *::before {
+*, 
+*::after, 
+*::before {
     box-sizing: border-box;
 }
 
@@ -9,13 +11,14 @@ body {
     font-weight: 500;
     color: #544837;
     line-height: 26px; 
+    height: 100%;
 }
 
 .container {
     max-width: 1200px;
     width: 100%;
     margin: 0 auto;
-    padding: 0 15px;
+    padding: 0;
 }
 
 h1 {
@@ -44,13 +47,8 @@ p {
     margin: 0 0 20px;
 }
 
-a, .btn:hover {
-    transition: all.6s ease;
-}
-
 .header {
     padding: 17px 0;
-    width: 100%;
 }
 
 .header .container {
@@ -60,22 +58,17 @@ a, .btn:hover {
     align-items: center;
 }
 
-/*ul .menu {
+.header ul {
     display: flex;
     justify-content: space-between;
-    margin: 0 auto;
-    text-decoration: none;
-    list-style-type: none;
-}*/
-
-.menu li {
-    display: inline-flex;
-    justify-content: space-between;
-    margin: 0 auto;
     position: relative;
-    padding: 0 10px;
+    margin: 0 auto;
     text-decoration: none;
     list-style-type: none;
+}
+
+.header li {
+    padding: 0 15px;
 }
 
 .header .nav .nav-link {
@@ -89,52 +82,51 @@ a, .btn:hover {
     color: #FF9900;
 }
 
-.btn .sing-in {
-    margin: 0 auto;
-    text-align: center;
-    background-color: #fff;
-    border-color: #BCD0E5;
-    width: 100%;
-    max-width: 110px;
-    height: 46px;
-    border-style: solid;
-    border-radius: 4px;
-    border-width: 1px;
-    text-decoration: none;
-    color: #2F281E;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 24px;
-    padding: 13px;
-    cursor:pointer;
+a, 
+.btn-holder:hover {
+    transition: all .6s ease;
 }
 
-.btn .sing-in:hover {
+.btn-holder {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+    max-width: 250px;
+}
+
+.btn.sing-in {
+    background-color: #fff;
+    border: 1px solid #BCD0E5;
+    color: #2F281E;
+    margin-right: 30px;
+}
+
+.btn.sing-in:hover {
     background-color: #FF9900;
     border-style: none;
     color: #fff;
 }
 
-.btn .sing-up {
-    margin: 0 auto;
+.btn {
+    display: inline-block;
     text-align: center;
+    width: 100%;
+    max-width: 110px;
     border: none;
     background-color: #FF9900;
     border-radius: 4px;
-    width: 100%;
-    max-width: 110px;
-    height: 46px;
     text-decoration: none;
     color: #fff;
+    padding: 13px;
+    display: inline-block;
     font-weight: 700;
     font-size: 16px;
     line-height: 24px;
-    padding: 13px;
-    cursor:pointer;
-    margin-left: 30px;
+    cursor: pointer;
 }
 
-.btn .sing-up:hover {
+.btn:hover {
     background-color: #fff;
     border: #BCD0E5;
     border-style: solid;
@@ -169,29 +161,20 @@ a, .btn:hover {
     line-height: 28px;
 }
 
-.hero-section .btn .get-started {
-    display: flex;
+.hero-section .btn-holder .get-started {
+    display: inline-block;
     border: none;
+    text-align: center;
     background-color: #FF9900;
     border-radius: 4px;
-    width: 100%;
-    max-width: 180px;
-    height: 100%;
-    max-height: 50px;
+    width: 180px;
+    height: 50px;
     text-decoration: none;
     color: #fff;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 24px;
     padding: 13px;
-    cursor:pointer;
-    flex-direction: row;
-    align-items: center;
-    align-content: center;
-    justify-content: center;
 }
 
-.hero-section .btn .get-started:hover {
+.hero-section .btn-holder .get-started:hover {
     background-color: #fff;
     border-color: #BCD0E5;
     border-style: solid;
@@ -201,18 +184,18 @@ a, .btn:hover {
 }
 
 .product {
-    background-image: url("./../img/bg.png");
-    background-size: contain;
-    background-position: 50% 50%;
+    background-size: cover;
+    background-position: 50% 100%;
     background-repeat: no-repeat;
+    padding: 0;
+    margin-bottom: 50px;
 }
 
 .product .container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: center;
-    padding: 0 0 100px;
+    padding: 0 0 70px 0;
 }
 
 .product h2 {
@@ -223,7 +206,8 @@ a, .btn:hover {
 }
 
 .product .row {
-    padding: 0 -20px;
+    margin: 0 -20px;
+    padding: 0;
 }
 
 .product .row .col {
@@ -231,19 +215,19 @@ a, .btn:hover {
     padding: 0 20px;
 }
 
-.product .container .btn {
+.product .container .btn-holder {
     display: flex;
     margin: 0 auto;
     width: 100%;
     justify-content: center;
-    padding: 25px 0 0 0;
+    padding: 35px 0 0 0;
 }
 
 .benefits-section .text p {
     margin: 0 auto;
 }
 
-.product .container .sing-up-now {
+.btn.xl {
     display: flex;
     border: none;
     background-color: #FF9900;
@@ -253,22 +237,15 @@ a, .btn:hover {
     height: 50px;
     text-decoration: none;
     color: #fff;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 24px;
     padding: 13px;
-    cursor:pointer;
-    flex-direction: row;
     align-items: center;
     justify-content: center;
 }
 
-.product .container .sing-up-now:hover {
+.btn.xl:hover {
     background-color: #ff00;
-    border-color: #BCD0E5;
-    border-style: solid;
+    border: 1px solid #BCD0E5;
     border-radius: 4px;
-    border-width: 1px;
     color: #2F281E;
 }
 
@@ -284,18 +261,13 @@ a, .btn:hover {
 
 .benefits-section .col {
     width: 50%;
-    padding: 50px;
+    padding: 0 90px 0 0;
+    margin: 80px 0;
 }
 
 .check-list .check {
-    display: flex;
-    flex-direction: row;
-    margin: 0 auto;
     padding: 17px 0 0 0;
     text-decoration: none;
-    list-style-type: none;
-    align-items: center;
-    margin-left: -40px;
 }
 
 .check p {
@@ -304,84 +276,62 @@ a, .btn:hover {
 }
 
 .benefits-section .check .icon-check {
-    margin: 0 auto;
-    max-width: 100%;
     width: 35px;
 }
 
-/*ul li {
+ul {
+    display: block;
     margin: 0 auto;
-    width: 100%;
-}*/
-
-.benefits-section .col .image-1 {
-    max-width: 100%;
-    width: 570px;
-    margin: 0 0 100px;
+    padding: 17px 0 0 0;
+    text-decoration: none;
+    list-style-type: none;
+    align-items: center;
 }
 
-footer .container .row {
+li {
+    display: flex;
+    flex-direction: row;
+    padding: 7px 0;
+}
+
+li .check p {
+    display: inline-block;
+    float: left;
+    margin: 0 auto;
+}
+
+.reference .container .row {
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    max-width: 1200px;
     align-items: flex-start;
-    /*border-top: 1px solid #BCD0E5;
-    border-width: 100%;*/
     padding: 40px 0 70px;
 }
 
-footer .container .row .col {
+.reference .container .row .col {
     width: 25%;
 }
 
-footer .container .logo {
+.reference .container .logo {
     padding: 22px 0 0 0;
 }
 
-footer ul li {
+/*footer ul li {
     list-style: none;
     padding: 10px 0;
     margin-left: -40px;
-}
+}*/
 
-footer .list .list-item a {
+.reference .list .list-item a {
     text-decoration: none;
     color: #2F281E;
     line-height: 26px;
 }
 
-footer .list .list-item a:hover {
+.reference .list .list-item a:hover {
     color: #FF9900;
-}
-
-footer .container .sing-up-now {
-    display: flex;
-    border: none;
-    background-color: #FF9900;
-    border-radius: 4px;
-    width: 100%;
-    max-width: 180px;
-    height: 50px;
-    text-decoration: none;
-    color: #fff;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 24px;
-    padding: 13px;
-    cursor:pointer;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-}
-
-footer .container .sing-up-now:hover {
-    background-color: #fff;
-    border-color: #BCD0E5;
-    border-style: solid;
-    border-radius: 4px;
-    border-width: 1px;
-    color: #2F281E;
 }
 
 form input {
@@ -396,7 +346,7 @@ form input {
     border-radius: 4px;
     border-width: 1px;
     text-decoration: none;
-    color: #BCD0E5;
+    color: #2F281E;
     font-weight: 400;
     font-size: 16px;
     line-height: 20px;
@@ -420,16 +370,9 @@ input, textarea {
     border: none;
 }
 
-/*.benefits-section#product-managers .container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: flex-start;
+.reference .btn-holder {
+    padding: 30px 0;
 }
-
-#product-managers .row .col {
-    width: 50%;
-}*/
 
 hr {
     border: none;
