--- a/HW-11/src/style/style.css
+++ b/HW-11/src/style/style.css
@@ -147,35 +147,35 @@ p {
     height: 270px;
 }
 
-.hero-section .img-row.card-1 .rotate-img-row{
+.hero-section .img-row.card-1 .overlay-img{
     background: url("../img/card-1.png"); 
     transition: ease-in-out 0.3s;
     width: 270px;
     height: 270px;
 }
 
-.hero-section .img-row.card-2 .rotate-img-row{
+.hero-section .img-row.card-2 .overlay-img{
     background: url("../img/card-2.png"); 
     transition: ease-in-out 0.3s;
     width: 270px;
     height: 270px;
 }
 
-.hero-section .img-row.card-3 .rotate-img-row{
+.hero-section .img-row.card-3 .overlay-img{
     background: url("../img/card-3.png"); 
     transition: ease-in-out 0.3s;
     width: 270px;
     height: 270px;
 }
 
-.hero-section .img-row.card-4 .rotate-img-row{
+.hero-section .img-row.card-4 .overlay-img{
     background: url("../img/card-4.png"); 
     transition: ease-in-out 0.3s;
     width: 270px;
     height: 270px;
 }
 
-.hero-section .img-row .rotate-img-row:hover {
+.hero-section .img-row .overlay-img:hover {
     background: url("../img/bg-blue-card.svg"); 
     background-position: 0 -0.1px;  
 }
@@ -220,91 +220,91 @@ p {
     font-size: 18px;
 }
 
-.footer .social-media-animated {
+.footer .social-media-overlay {
     margin: 0 auto;
     position: relative;
     width: 43px;
     height: 42px;
 }
 
-.footer .social-media-animated.twitter .sm-first{
+.footer .social-media-overlay.twitter .sm-first{
     background: url("../img/twitter-rotate.svg"); 
     transition: ease-in-out 0.3s;
     width: 43px;
     height: 42px;
 }
 
-.footer .social-media-animated.twitter .sm-first:hover {
+.footer .social-media-overlay.twitter .sm-first:hover {
     background: url("../img/twitter.svg"); 
     background-position: 0 0.1px;  
 }
 
-.footer .social-media-animated.facebook .sm-first{
+.footer .social-media-overlay.facebook .sm-first{
     background: url("../img/facebook-rotate.svg"); 
     transition: ease-in-out 0.3s;
     width: 43px;
     height: 42px;
 }
 
-.footer .social-media-animated.facebook .sm-first:hover {
+.footer .social-media-overlay.facebook .sm-first:hover {
     background: url("../img/facebook.svg"); 
     background-position: 0 0.1px;  
 }
 
-.footer .social-media-animated.instagram .sm-first{
+.footer .social-media-overlay.instagram .sm-first{
     background: url("../img/instagram-rotate.svg"); 
     transition: ease-in-out 0.3s;
     width: 43px;
     height: 42px;
 }
 
-.footer .social-media-animated.instagram .sm-first:hover {
+.footer .social-media-overlay.instagram .sm-first:hover {
     background: url("../img/instagram.svg"); 
     background-position: 0 0.1px;  
 }
 
-.footer .social-media-animated.linkedin .sm-first{
+.footer .social-media-overlay.linkedin .sm-first{
     background: url("../img/linkedin-rotate.svg"); 
     transition: ease-in-out 0.3s;
     width: 43px;
     height: 42px;
 }
 
-.footer .social-media-animated.linkedin .sm-first:hover {
+.footer .social-media-overlay.linkedin .sm-first:hover {
     background: url("../img/linkedin.svg"); 
     background-position: 0 0.1px;  
 }
 
-.footer .social-media-animated.telegram .sm-first{
+.footer .social-media-overlay.telegram .sm-first{
     background: url("../img/telegram-rotate.svg"); 
     transition: ease-in-out 0.3s;
     width: 43px;
     height: 42px;
 }
 
-.footer .social-media-animated.telegram .sm-first:hover {
+.footer .social-media-overlay.telegram .sm-first:hover {
     background: url("../img/telegram.svg"); 
     background-position: 0 0.1px;  
 }
 
-/*.footer a.social-media-animated img {
+/*.footer a.social-media-overlay img {
     position: absolute;
     left: 0;
     top: 0;
 }
 
-.footer a.social-media-animated img.first {
+.footer a.social-media-overlay img.first {
     opacity: 0;
     filter: alpha (opacity=0);
 }
 
-.footer a.social-media-animated img.first:hover {
+.footer a.social-media-overlay img.first:hover {
     opacity: 1;
     filter: alpha (opacity=100);
 }
 
-.footer a.social-media-animated:hover img.second, 
-.footer a.social-media-animated img.second:hover {
+.footer a.social-media-overlay:hover img.second, 
+.footer a.social-media-overlay img.second:hover {
     opacity:0;
     filter: alpha (opacity=0);
 }*/
