--- a/HW-13/src/style/style.css
+++ b/HW-13/src/style/style.css
@@ -165,10 +165,19 @@ body {
 
 .image-holder {
     position: relative;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /*overflow: hidden;*/
 }
 
 .image-holder img{
     border-radius: 20px;
+    height: 100%;
+    width: auto;
+    /*width: 100%;
+    height: auto;
     /*background-repeat: no-repeat;
     background-position: center;
     background-size: cover;*/
@@ -183,6 +192,10 @@ body {
     left: 0;
     right: 0;
     border-radius: 20px;
+    /*background-position: inherit;
+    /*background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     /*padding: 5px 0;
     margin: -5px 0;
     display: flex;
@@ -196,6 +209,7 @@ body {
 .image-holder:hover .background-image{
     opacity: 0;
     visibility: hidden;
+
     transition: all 0.3s ease-out;
 }
 
