--- a/HW-12/src/style/style.css
+++ b/HW-12/src/style/style.css
@@ -90,7 +90,7 @@ img {
 }
 
 .img-holder img:hover {
-    transform: scale(1.2);
+    transform: rotateY(180deg);
 } 
 
 .actions {
@@ -135,6 +135,15 @@ img {
     content: "\f004";
 }
 
+.producl-label {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
 .product-bestseller {
     padding: 5px;
     color: black;
@@ -148,8 +157,8 @@ img {
     background-color: rgb(166, 94, 79);
     padding: 5px;
     color: white;
-    position: absolute;
-    bottom: 0;
+
+
 }
 
 .product-label-eco {
@@ -157,8 +166,7 @@ img {
     padding: 5px;
     color: black;
     opacity: 0.8;
-    position: absolute;
-    bottom: 30px;
+
 }
 
  .add-to-wishlist {
