--- a/HW-13/src/style/style.css
+++ b/HW-13/src/style/style.css
@@ -175,6 +175,7 @@ body {
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    border-radius: 20px;
 }
 
 .image-holder img{
@@ -248,6 +249,22 @@ body {
     background-image: linear-gradient(to top, #241F24 1.04%, rgba(91, 91, 91, 0.26) 6.99%, rgba(187, 186, 192, 0) 12.29%);
 }
 
+.icon-holder {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: ease-in-out 0.3s;
+}
+
+.icon-holder:hover {
+    opacity: 1;  
+}
+
 .icon-holder .like-icon {
     position: absolute;
     background-image: url("../img/like.svg"); 
@@ -260,6 +277,7 @@ body {
     width: 40px;
     height: 40px;
     transition: ease-in-out 0.3s;
+    opacity: 1;
 }
 
 .icon-holder .download-icon {
@@ -274,6 +292,7 @@ body {
     width: 40px;
     height: 40px;
     transition: ease-in-out 0.3s;
+    opacity: 1;
 }
 
 .icon-holder .like-icon:hover,
