--- a/HW-14/src/style/style.css
+++ b/HW-14/src/style/style.css
@@ -109,7 +109,6 @@ h2 {
     float: left;
     padding-left: 50px;
     text-align: center;
-
 }
 
 .nav-link {
@@ -148,19 +147,18 @@ h2 {
 .title-holder {
     display: flex;
     flex-direction: row;
-    width: fit-content;
     padding: 70px 0 0;
 }
 
 .title-holder .title {
     position: relative;
-    padding: 10px 0 0;
+    padding-top: 10px;
 }
 
 .title-holder .chapter {
     font-family: 'farro';
     font-weight: 300;
-    font-size: 20px;
+    font-size: 18px;
     line-height: 30px;
     letter-spacing: 0.04em;
     padding-left: 10px;
