--- a/HW-14/src/style/fonts.css
+++ b/HW-14/src/style/fonts.css
@@ -144,28 +144,40 @@
 
 @font-face {
     font-family: 'staatliches';
-    src: url('./staatliches-regular-webfont.eot');
-    src: url('./src/fonts/staatliches-regular-demo.html') format('embedded-opentype'),
-         url('./src/fonts/staatliches-regular-webfont.woff2') format('woff2'),
-         url('./src/fonts/staatliches-regular-webfont.woff') format('woff'),
-         url('./src/fonts/staatliches-regular-webfont.ttf') format('truetype'),
-         url('./src/fonts/staatliches-regular-webfont.svg') format('svg');
-    font-weight: normal;
+    src: url('../fonts/staatliches-regular-webfont.eot');
+    src: url('../fonts/staatliches-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/staatliches-regular-webfont.woff2') format('woff2'),
+         url('../fonts/staatliches-regular-webfont.woff') format('woff'),
+         url('../fonts/staatliches-regular-webfont.ttf') format('truetype'),
+         url('../fonts/staatliches-regular-webfont.svg#staatlichesregular') format('svg');
+    font-weight: 400;
     font-style: normal;
 
 }
 
+@font-face {
+    font-family: 'Staatliches';
+    src: url('../fonts/Staatliches-Regular.eot');
+    src: url('../fonts/Staatliches-Regular.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/Staatliches-Regular.woff2') format('woff2'),
+        url('../fonts/Staatliches-Regular.woff') format('woff'),
+        url('../fonts/Staatliches-Regular.ttf') format('truetype'),
+        url('../fonts/Staatliches-Regular.svg#Staatliches-Regular') format('svg');
+    font-weight: 400;
+    font-style: normal;
+}
+
+
 
 
 @font-face {
-    font-family: 'tourney';
-    src: url('../fonts/tourney-variablefont_wdthwght-webfont.eot');
-    src: url('../fonts/tourney-variablefont_wdthwght-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/tourney-variablefont_wdthwght-webfont.woff2') format('woff2'),
-         url('../fonts/tourney-variablefont_wdthwght-webfont.woff') format('woff'),
-         url('../fonts/tourney-variablefont_wdthwght-webfont.ttf') format('truetype'),
-         url('../fonts/tourney-variablefont_wdthwght-webfont.svg#tourneythin') format('svg');
+    font-family: 'Tourney';
+    src: url('../fonts/Tourney-SemiBold.eot');
+    src: url('../fonts/Tourney-SemiBold.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/Tourney-SemiBold.woff2') format('woff2'),
+        url('../fonts/Tourney-SemiBold.woff') format('woff'),
+        url('../fonts/Tourney-SemiBold.ttf') format('truetype'),
+        url('../fonts/Tourney-SemiBold.svg#Tourney-SemiBold') format('svg');
     font-weight: 600;
     font-style: normal;
-
 }
