--- a/HW-14/src/style/style.css
+++ b/HW-14/src/style/style.css
@@ -128,9 +128,7 @@ h2 {
     padding: 0 4px;
     transition: all 0.3s ease-out;
     text-decoration: none;
-    /*font-family: 'staatliches';
-    /*font-family: 'Staatliches';*/
-    font-family: 'francois_one';
+    font-family: 'Staatliches';
     font-weight: 400;
     font-size: 22px;
     line-height: 28px;
