--- a/HW-17/src/style/scss/page/_main-page.scss
+++ b/HW-17/src/style/scss/page/_main-page.scss
@@ -52,22 +52,21 @@
         }
     }
 
-        .col {
+    .col {
 
-            &:first-child {
-                display: flex;
-                content: '';
-                border-right: 1px solid $gold;
-                height: 560px;
-                justify-content: center;
-                place-items: center;
-            }
+        &:first-child {
+            display: flex;
+            border-right: 1px solid $gold;
+            height: 560px;
+            justify-content: center;
+            place-items: center;
+        }
         
-            &:last-child {
-                margin: 0 auto;
-                max-width: 430px;
-            }
-        }     
+        &:last-child {
+            margin: 0 auto;
+            max-width: 430px;
+        }
+    }     
 }
 
 .img-holder-team {
@@ -126,8 +125,7 @@
             height: 1px;
             width: 100px;
             background: $gold;
-            margin: 0 auto;
-            margin-top: 30px;
+            margin: 30px auto 0;
         }
     }
 
